# gptvalidation

./: .gitignore  CHANGELOG.md  Lang.hs  README.md  SymEx.hs  SymExpr.hs  TVC.hs  build.sh  cabal.project  gptvalidation.cabal  testsuite.out  tinyvalidator.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
formalism/: symex.tex
src/: AST.hs  Desugar.hs  Disambiguate.hs  Env.hs  HughesList.hs  Lang.hs  List.hs  Normalize.hs  NormalizedAST.hs  Parser.hs  PassManager.hs  SBVConvert.hs  Solve.hs  SymbolicExecution.hs  SymbolicExpression.hs  Types.hs  UnambiguousAST.hs
test/: GPT.hs  Simple.hs  TestSuite.hs  TestUtils.hs
tex/: symex.aux  symex.fdb_latexmk  symex.fls  symex.tex
tex/.auctex-auto/: symex.el
